JumpScript/tests/baselines/reference/parserMemberFunctionDeclaration4.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclaration4.jump(2,5): error TS1031: 'export' modifier cannot appear on a class element.


==== tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclaration4.jump (1 errors) ====
    class C {
        export Foo() { }
        ~~~~~~
!!! error TS1031: 'export' modifier cannot appear on a class element.
    }